feat: Add Create Payment Page with group and expense selection
- Implemented CreatePaymentPage component for creating payments.
- Added state management for groups, balances, payment suggestions, and unpaid expenses.
- Integrated API calls to fetch groups, balances, payment suggestions, and unpaid expenses.
- Included form validation and error handling for payment creation.
- Enhanced user experience with payment suggestions and linking unpaid expenses.

fix: Update PaymentsPage pagination handler

- Changed parameter name in handleChangePage function for clarity.

refactor: Remove unused PersonIcon import in ProfilePage

- Cleaned up imports in ProfilePage.tsx by removing unused PersonIcon.

fix: Update StatisticsPage tab change handler

- Updated parameter name in handleTabChange function for consistency.

chore: Comment out PWA registration in registerSW

- Temporarily disabled PWA registration to address TypeScript errors.

feat: Add updateUserData method to authStore

- Introduced updateUserData method to update user information in auth store.

feat: Extend User interface with additional fields

- Added authProvider, groupCount, and expenseCount fields to User interface.

chore: Create vite-env.d.ts for environment variable types

- Added vite-env.d.ts to define types for Vite environment variables.

feat: Configure Vite proxy for API requests

- Set up proxy in vite.config.ts to redirect API requests to backend service.

fix: Update nginx configuration for better proxy handling

- Enhanced nginx configuration with additional headers and removed unnecessary directives.

chore: Add default index.html for nginx

- Created a simple index.html file for the nginx server.

chore: Initialize package-lock.json and package.json

- Added package-lock.json and package.json for dependency management.

chore: Update Prometheus configuration for nginx metrics

- Commented out nginx metrics scraping in Prometheus config due to lack of metrics exposure.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
+    "debug": "nodemon --exec node --inspect=0.0.0.0:9229 -r ts-node/register src/index.ts",
     "build": "tsc",
     "test": "jest",
     "lint": "eslint . --ext .ts"
@@ -59,6 +60,7 @@
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.10.9",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
