--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -12,7 +12,12 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
+        
+        # Remove try_files directive when using proxy_pass
+        # try_files $uri $uri/ /index.html;
     }
 
     location /api {
@@ -24,6 +29,11 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+    
+    # Handle /metrics endpoint separately to avoid redirect loops
+    location = /metrics {
+        return 404; # Return 404 for metrics since nginx doesn't expose metrics by default
     }
 
     # Health check endpoint
