--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,15 +19,16 @@
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "workbox-window": "^7.0.0",
     "yup": "^1.2.0",
-    "zustand": "^4.4.1",
-    "workbox-window": "^7.0.0"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
