--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -25,6 +25,8 @@ scrape_configs:
     static_configs:
       - targets: ['frontend:5173']
 
-  - job_name: 'nginx'
-    static_configs:
-      - targets: ['nginx:80']
+  # Removed nginx metrics scraping as nginx doesn't expose metrics by default
+  # To enable nginx metrics, we would need to add the nginx-prometheus-exporter
+  # - job_name: 'nginx'
+  #   static_configs:
+  #     - targets: ['nginx-exporter:9113']
